# customer-booking-agent

./: .gitignore  GEMINI.md  Makefile  README-Configure-IAP.md  README.md  config.example.sh  pyproject.toml  register-agent-engine-ge.sh  test_a2a.py  test_auth.py
.agents/: GEMINI.md
.agents/rules/: best-practices-adk.md  load-gemini-context.md
.cloudbuild/: build-fast-api-fe.yaml  build-fast-api-fe.yaml.tpl  deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
.gemini/: GEMINI.md  system.md
.github/: old-github-reivew.yml
bookings/: agent.py  agent_engine_app.py  agent_executor.py  app.py  deploy_agent_engine.py  pyproject.toml  security.py
customers/: agent.py  app.py  deploy_agent_engine.py  pyproject.toml  security.py
customers/.adk/: session.db
customers/customers/: agent.py
customers/customers/.adk/: session.db
fast-api-fe/: .dockerignore  Dockerfile  README.md  __init__.py  build-on-cloud-build.sh  build.sh  deploy.sh  handler.html  main.py  pyproject.toml  requirements.txt  security.py
fast-api-fe/models/: openai_schema.py
fast-api-fe/routers/: chat.py  ui.py
fast-api-fe/services/: agent_client.py
fast-api-fe/static/: chat.js  style.css
fast-api-fe/templates/: chat.html
ingress/: README.md
notebooks/: adk_a2a_app_testing.ipynb  evaluating_adk_agent.ipynb
plans/: 00_MASTER_ROADMAP.md  PHASE_1_EPICS_STORIES.md  STORY_3_1_IMPLEMENTATION.md  USER_STORIES.md  agent-auth-and-deployment-issues.md  agent-engine-troubleshooting.md  agent-threading-and-import-resolution.md  event-loop-investigation.md  fast-api-fe.md  jwt_claims.md  long_term_memory.md  permissions.md  session_management_refactor.md
plans_artifacts/: a2a_agent_engine_deployment.md  agent_engine_headers.md
setup-scripts/: after-agents-deployment-grant.sh  after-customers-agent-deployment-grant.sh  agent.py  enable-apis.sh  grant-all.sh  grant-cloud-build-roles.sh  grant-cloud-run-functions-roles.sh  grant-frontend-ui-roles.sh  setup-ar-repo.sh
tests/: helpers.py
(+65 files in other folders)
