[project]
name = "agent-security-patterns"
version = "0.1.0"
description = "A secure multi-agent system reference implementation"
requires-python = ">=3.10"
dependencies = [
    "bookings",
    "customers",
    "fast-api-fe",
]

[tool.uv.sources]
bookings = { workspace = true }
customers = { workspace = true }
fast-api-fe = { workspace = true }

[tool.uv]
managed = true

[tool.uv.workspace]
members = ["bookings", "customers", "fast-api-fe"]
