[project]
name = "customers"
version = "0.1.0"
description = "Orchestrator agent for customer details and delegation"
requires-python = ">=3.10"
dependencies = [
    "google-cloud-aiplatform[evaluation,agent-engines]>=1.130.0",
    "google-adk>=1.16.0,<2.0.0",
    "a2a-sdk~=0.3.22",
    "google-auth>=2.29.0",
    "nest-asyncio>=1.6.0,<2.0.0",
    "opentelemetry-instrumentation-google-genai>=0.1.0,<1.0.0",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-grpc",
    "opentelemetry-instrumentation-httpx",
    "gcsfs>=2024.11.0",
    "google-cloud-logging>=3.12.0,<4.0.0",
    "protobuf>=6.31.1,<7.0.0",
    "starlette>=0.37.0",
    "PyJWT>=2.8.0",
    "pydantic==2.12.5",
    "cloudpickle==3.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
