[project]
name = "fast-api-fe"
version = "0.1.0"
description = "Chat UI and Agent Gateway"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "google-adk>=1.16.0,<2.0.0",
    "google-cloud-aiplatform[agent-engines]>=1.130.0",
    "google-auth>=2.29.0",
    "PyJWT>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
